Prevented the background image from creating unnecessary scrollbars

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,9 +1,12 @@
 @import url('https://fonts.googleapis.com/css?family=Lobster|Oswald:400,700');
 
 /*Colours
-#FD4D0C Orange
-#0247FE Royal Blue
-#091534 Dark Blue*/
+#D4D4F7 Lilac
+#341509 Dark Brown*/
+
+body {
+    overflow: hidden;  /*Ensures that the background image does not create an unnecessary scrollbar*/
+}
 
 .main-content {
     min-height:100vh;
@@ -19,23 +22,13 @@
     position: relative;
 }
 
-/*#bg {*/
-/*  position: fixed; */
-/*  top: 0; */
-/*  left: 0; */
-	
-  /* Preserve aspet ratio */
-/*  min-width: 100%;*/
-/*  min-height: 100%;*/
-/*}*/
-
-
 .text-box {
     background-color: rgba(184, 170, 20, 0.7);
     color: #342E09;
-    width: 1000px;
-    height: 500px;
+    width: 50vw;
+    height: 50vh;
     padding: 20px;
+    position: absolute;
 }
 
 .title {
